[package]
name = "ecut"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
arboard = "3.6.0"
eframe.version = "0.31.1"
eframe.default-features = false
eframe.features = ["default_fonts", "glow", "wayland", "x11"]

[profile.release]
panic = "abort"
lto = "thin"
strip = "symbols"
